--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>내 포트폴리오 | Kim Developer</title>
+    <title>ㅁㅁ 포트폴리오 | Kim Developer</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons -->
@@ -245,4 +245,5 @@
         lucide.createIcons();
     </script>
 </body>
+
 </html>
