--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
             <span class="bg-gradient-to-r from-cyan-400 via-blue-500 to-purple-600 bg-clip-text text-transparent neon-text italic">Creativity.</span>
         </h1>
         <p class="text-slate-400 text-lg md:text-xl text-center max-w-2xl leading-relaxed mb-10">
-            복잡한 문제를 단순하고 아름다운 코드로 해결하는 것을 좋아하는 프론트엔드 개발자입니다. 
-            사용자 중심의 경험을 설계합니다.
+            복ㅁㄴㄻㄴㄹㄴㅁㄹㄴㅁㄻㄴㄹㄴㅁ.
         </p>
         <div class="flex flex-wrap justify-center gap-4">
             <a href="#projects" class="px-8 py-4 bg-white text-slate-900 font-bold rounded-full hover:bg-cyan-400 transition-all transform hover:scale-105">
@@ -247,3 +246,4 @@
 </body>
 
 </html>
+
